# tnt

./: README.md  algorithm.m  dicombennik.m  dicomcrop.m  haodeda.txt  markpoints.m
.ipynb_checkpoints/: parameter_complement_MSLR_10features-checkpoint.ipynb  parameter_completeness_3_7-checkpoint.ipynb
ITK/ITKbin/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestCustom.cmake  ITKConfig.cmake  ITKConfigVersion.cmake  ITKData_config.cmake  ITKTargets.cmake  Makefile  README.txt  cmake_install.cmake  install_manifest.txt  single-doxygen.config
ITK/ITKbin/Modules/Core/Common/CMakeTmp/ITK_PRIVATE_DYNAMIC_CAST/: CMakeCache.txt  CMakeLists.txt  Makefile  base.cxx  base.h  cmake_install.cmake  libbase.dylib  main.cxx
ITK/ITKbin/Modules/Remote/: Makefile  cmake_install.cmake
ITK/test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
master_thesis/: Bibliography.bib  ClassicThesis.tex  README.md  classicthesis-config.tex  classicthesis.sty
master_thesis/Background/: Explanations for Learning-to-Rank models.tex  classicthesis-book-xelatex.tex
master_thesis/Chapters/: Chapter01.tex  Chapter02.tex  Chapter03.tex  Chapter04.tex  Chapter05.tex  Chapter06.tex  Chapter07.tex  Chapter0A.tex
master_thesis/FrontBackmatter/: Abstract.tex  Acknowledgments.tex  Colophon.tex  Contents.tex  Declaration.tex  DirtyTitlepage.tex  Titlepage.tex
viewer3d_version12a/: license.txt  viewer3d.m
viewer3d_version12a/ReadData3D/: lastfile.mat
viewer3d_version12a/SubFunctions/: interpcontour.m
(+640 files in other folders)
